--- a/Curso - Casos Practicos/AndroidManifest.xml
+++ b/Curso - Casos Practicos/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name="Caso2MainActivity"></activity>
         <activity android:name="Caso2ResultActivity"></activity>
         <activity android:name="Caso3MainActivity"></activity>
+        <activity android:name="Caso4MainActivity"></activity>
         
     </application>
 
